only code changed:  df.rating < 4

--- a/Lab1-pythonpandas.ipynb
+++ b/Lab1-pythonpandas.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +186,7 @@
        "4    4.23        34772  0679783261  good_reads:book  https://www.goodreads.com/author/show/1265.Jan...  1813  /genres/classics|/genres/fiction|/genres/roman...                dir01/1885.Pride_and_Prejudice.html      1388992                                Pride and Prejudice"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +234,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -380,75 +380,75 @@
       "text/plain": [
        "0       False\n",
        "1       False\n",
-       "2       False\n",
+       "2        True\n",
        "3       False\n",
        "4       False\n",
        "5       False\n",
        "6       False\n",
        "7       False\n",
-       "8       False\n",
+       "8        True\n",
        "9       False\n",
        "10      False\n",
-       "11      False\n",
+       "11       True\n",
        "12      False\n",
        "13      False\n",
-       "14      False\n",
+       "14       True\n",
        "15      False\n",
-       "16      False\n",
+       "16       True\n",
        "17      False\n",
-       "18      False\n",
+       "18       True\n",
        "19      False\n",
        "20      False\n",
        "21      False\n",
        "22      False\n",
        "23      False\n",
-       "24      False\n",
-       "25      False\n",
+       "24       True\n",
+       "25       True\n",
        "26      False\n",
-       "27      False\n",
+       "27       True\n",
        "28      False\n",
-       "29      False\n",
+       "29       True\n",
        "        ...  \n",
-       "5970    False\n",
+       "5970     True\n",
        "5971    False\n",
        "5972    False\n",
        "5973    False\n",
-       "5974    False\n",
+       "5974     True\n",
        "5975    False\n",
        "5976    False\n",
        "5977    False\n",
-       "5978    False\n",
+       "5978     True\n",
        "5979     True\n",
-       "5980    False\n",
-       "5981    False\n",
+       "5980     True\n",
+       "5981     True\n",
        "5982    False\n",
        "5983    False\n",
        "5984    False\n",
-       "5985    False\n",
+       "5985     True\n",
        "5986    False\n",
        "5987    False\n",
        "5988    False\n",
-       "5989    False\n",
+       "5989     True\n",
        "5990    False\n",
        "5991    False\n",
-       "5992    False\n",
+       "5992     True\n",
        "5993    False\n",
        "5994    False\n",
        "5995    False\n",
-       "5996    False\n",
-       "5997    False\n",
-       "5998    False\n",
+       "5996     True\n",
+       "5997     True\n",
+       "5998     True\n",
        "5999    False\n",
        "Name: rating, dtype: bool"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.rating < 3"
+    "df.rating < 4"
    ]
   },
   {
